Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9849

Gestures in GraphicsView should not require a viewport to subscribe to same gestures

    XMLWordPrintable

Details

    • 28ad286c3e2df7e391d4e5cbe41958c9be12d900

    Description

      With the current implementation to be able to handle gestures in QGraphicsView with QGraphicsObjects both graphicsobjects and the viewport should subscribe to gestures. This should be fixed, the viewport should not know if its items subscribe to gestures.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dzyubenk Denis Dzyubenko (Inactive)
            dzyubenk Denis Dzyubenko (Inactive)
            Votes:
            6 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes