Gestures in GraphicsView do not require a viewport to subscribe to gestures.

When a graphicsitem subscribes to a gesture the viewport is implicitly
subscribed to it as well.

Task-number: QTBUG-9849
Reviewed-by: Olivier Goffart
Reviewed-by: Mikko Harju